fix performances view on mobile screen

--- a/style.css
+++ b/style.css
@@ -300,7 +300,7 @@ header nav a{
 .conductor-profile h2{
     position: relative;
     bottom: 110px;
-    left: 120px;
+    left: 100px;
     color: rgba(255, 255, 255, 0.664);
 }
 
@@ -719,12 +719,13 @@ header nav a{
 
 @media screen and (max-width: 600px) {
 
+
  body{
     max-width: 600px;
     padding: 0;
     margin: 0;
     position: relative;
-    
+    overflow-x: hidden;
     height: 50vh;
     padding-top: 10;
  }
@@ -733,7 +734,7 @@ header{
     max-width: 600px;
     overflow-x: hidden;
     height: 10%;
-
+    
 }
  .section1{
     display: grid;
@@ -742,6 +743,7 @@ header{
     height: 90vh;
     padding-top: 50px;
     overflow-x: hidden;
+    
  }
 .tagLine h1{
     font-size: xx-large;
@@ -768,7 +770,7 @@ header{
     height: 90dvh;
     padding-bottom: 20px;
     gap: 5px;
-    overflow-x: hidden;
+    
 }
 
 
@@ -781,6 +783,7 @@ header{
     margin-top: 0;
     font-size: 14px;
 }
+
 .para ul{
     justify-content: center;
     text-align: justify;
@@ -795,7 +798,6 @@ header{
     display: flex;
     flex-direction: column;
     margin-top: 10px;
-    
 }
 
 .vision div{
@@ -826,6 +828,7 @@ header{
     max-width: 600px;
     overflow-x: hidden;
 }
+
 .performances{
     max-width: 600px;
     overflow-x: hidden;
@@ -880,14 +883,13 @@ header{
 .performances{
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    height: 90dvh;
     margin: 0;
-    padding: 0;
+    padding: 1rem;
+    padding-bottom: 300px;
     justify-content: center;
     align-items: center;
     align-content: center;
-    height: 90dvh;
-    overflow: hidden;
 }
 
 .Navi{
@@ -920,16 +922,20 @@ header{
 
 }
 
-
-.perf{
-    position: relative;
-    justify-content: center;
-    align-items: center;
-    gap: 50px;
-    margin: 0;
-    padding: 0;
+.taas img{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height: 250px;
+    aspect-ratio: 16/9;
 }
 
+.divide{
+    position: relative;
+    width: 450px;
+    top: 270px;
+}
 
 }
 
